Thu Jul 26 02:19:57 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/ds/NotOrientedEdge.java: Remove obsolete
	class.
	* src/org/jcae/mesh/amibe/patch/OTriangle2D.java
	  src/org/jcae/mesh/amibe/patch/VirtualHalfEdge2D.java: Rename OTriangle2D
	into VirtualHalfEdge2D for consistency reason.

Mon Jul 23 20:08:36 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/cad/CADShapeBuilder.java: Add types to
	newCurve2D() and newCurve3D() arguments.

Fri Jul 20 16:01:31 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/ds/MMesh1D.java: New boundaryNodes() method.
	* src/org/jcae/mesh/amibe/algos2d/Initial.java
	  src/org/jcae/mesh/amibe/algos2d/BasicMesh.java: Modify Initial()
	  constructor, its 2nd argument is now a Vertex2D array instead of
	  MMesh1D.
	* src/org/jcae/mesh/bora/ds/BModel.java: Compute 2D meshes.

Release jCAE 0.14.2

Wed Jul 18 13:02:59 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/xmldata/MeshReader.java (readObject3D): Avoid
	NullPointerException when jcae3d.files/nodes1dref.bin file is missing.

Thu Jul 13 13:29:40 CEST 2007 Jerome Robert <jeromerobert@users.sourforge.net>

	* src/org/jcae/mesh/Mesher.java: Try to make the main class more
	  accessible and easier to gridify (not yet finished).

Thu Jul 12 16:31:40 CEST 2007 Denis Barbier <barbier@users.sourceforge.net>

	* src/org/jcae/mesh/amibe/algos3d/DecimateHalfEdge.java (main): Modify
	parameters so that jcae-netbeans can call DecimateHalfEdge instead of
	DecimateVertex with the same arguments.

Tue Jun 12 14:13:00 CEST 2007 Ahmed Bennani <ahmed_b@users.sourceforge.net>

	* src/org/jcae/mesh/mesher/ds/MNode1D.java
	  src/org/jcae/mesh/mesher/ds/MMesh0D.java
	  src/org/jcae/mesh/mesher/ds/MMesh1D.java
	  src/org/jcae/mesh/mesher/ds/SubMesh1D.java
	Creation of a MMesh0D and a MMesh1D using the discretizations' 
	definition found in a model
